# sciencebeam-trainer-delft

./: Dockerfile  Makefile  README.md  gcloud-ai-custom-job-submit.sh  pyproject.toml
.github/workflows/: dependabot-auto-merge.yml  github-actions-ci.yml
sciencebeam_trainer_delft/resources/default_config/: __init__.py  resources-registry.json
sciencebeam_trainer_delft/sequence_labelling/: callbacks.py  config.py  data_generator.py  models.py  preprocess.py  tag_formatter.py  tagger.py  trainer.py  transfer_learning.py  wrapper.py
sciencebeam_trainer_delft/sequence_labelling/tools/grobid_trainer/: cli.py  cli_args.py  utils.py
sciencebeam_trainer_delft/text_classification/: __main__.py  callbacks.py  models.py  saving.py  wrapper.py
sciencebeam_trainer_delft/utils/: io.py  no_keras_backend_message.py
sciencebeam_trainer_delft/utils/keras/: callbacks.py
tests/sequence_labelling/: data_generator_test.py  preprocess_test.py  tag_formatter_test.py  wrapper_test.py
tests/sequence_labelling/tools/grobid_trainer/: utils_test.py
tests/utils/: io_test.py
