[project]
name = "sciencebeam-trainer-delft"
version = "0.0.0"
description = "ScienceBeam Trainer DeLFT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonpickle>=1.4.1",
]

[project.optional-dependencies]
tf = [
    "tensorflow>=2.17.1",
    "wrapt>=1.14.0",
]
delft = [
    "delft>=0.4.0",
]

[tool.uv.sources]
delft = { git = "https://github.com/kermitt2/delft" }

[dependency-groups]
dev = [
    "flake8>=4.0.1",
    "mypy>=1.19.0",
    "pylint>=3.3.9",
    "pytest>=8.4.2",
    "pytest-watcher>=0.6.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.27.5",
]

[tool.setuptools.packages.find]
include = ["sciencebeam_trainer_delft*"]

[tool.pytest-watcher]
now = true
clear = false
delay = 0.2
runner = ".venv/bin/python"
runner_args = ["-m", "pytest"]
